--- a/Dashboard/Views/Shared/_Layout.cshtml
+++ b/Dashboard/Views/Shared/_Layout.cshtml
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -29,5 +29,6 @@
   <!-- AdminLTE App -->
   <script src="~/adminlte/dist/js/dashboard.min.js"></script>
   @RenderSection("Scripts", required: false)
+ 
 </body>
 </html>
