--- a/Dashboard/Views/Shared/_Sidebar.cshtml
+++ b/Dashboard/Views/Shared/_Sidebar.cshtml
@@ -26,7 +26,7 @@
                      with font-awesome or any other icon font library -->
                 <!-- Pagina de Pagamentos -->
                 <li class="nav-item">
-                    <a href="#" class="nav-link">
+                    <a href="/Finalizadora/Create" class="nav-link">
                         <i class="nav-icon fas fa-money-check"></i>
 
                         <p>
@@ -62,7 +62,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="#" class="nav-link active">
+                            <a href="/Pagamentos/Create" class="nav-link active">
                                 <i class="far fa-circle nav-icon text-info"></i>
                                 <p>Formas de Pagamento</p>
                             </a>
