--- a/Dashboard/Views/Usuario/Edit.cshtml
+++ b/Dashboard/Views/Usuario/Edit.cshtml
@@ -1,11 +1,10 @@
 ﻿@model Dashboard.Models.Usuario
 
 @{
-    ViewData["Title"] = "Cadastro de Usuário";
+    ViewData["Title"] = "Edit";
 }
 
-
-
+<
 <div class="content-wrapper">
     <!-- Inicio do Header da pagina -->
     <div class="content-header">
@@ -39,9 +38,9 @@
 
                             <div class="row">
                                 <div class="col-md">
-                                    <form asp-action="Add">
+                                    <form asp-action="EditUsuario">
                                         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-
+                                        <input type="hidden" asp-for="Id" />
                                         <div class="form-group">
                                             <label asp-for="Nome" class="control-label"></label>
                                             <input asp-for="Nome" class="form-control" />
@@ -49,29 +48,17 @@
                                         </div>
                                         <div class="form-group">
                                             <label asp-for="Email" class="control-label"></label>
-                                            <input asp-for="Email" type="email" class="form-control" />
-                                            <span asp-validation-for="Email" class="error invalid-feedback">
-                                            </span>
+                                            <input asp-for="Email" class="form-control" />
+                                            <span asp-validation-for="Email" class="text-danger"></span>
                                         </div>
                                         <div class="form-group">
-                                            <label asp-for="ChavePrivada" class="control-label"></label>
-                                            <input asp-for="ChavePrivada" type="password" class="form-control" />
+                                            <label asp-for="ChavePrivada" class="control-label" ></label>
+                                            <input asp-for="ChavePrivada" class="form-control" type="password" placeholder="******" />
                                             <span asp-validation-for="ChavePrivada" class="text-danger"></span>
                                         </div>
+
                                         <div class="form-group">
-                                            <input type="submit" value="Cadastrar" class="btn btn-info" />
-                                        </div>
-                                        <div class="custom-control custom-checkbox">
-                                            <input type="checkbox" name="terms" class="custom-control-input" id="exampleCheck1">
-                                            <label class="custom-control-label" for="exampleCheck1">
-                                                <font style="vertical-align: inherit;">
-                                                    <font style="vertical-align: inherit;">Concordo com os </font>
-                                                </font><a href="#">
-                                                    <font style="vertical-align: inherit;">
-                                                        <font style="vertical-align: inherit;">termos de LGPD</font>
-                                                    </font>
-                                                </a><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"> .</font></font>
-                                            </label>
+                                            <input type="submit" value="Save" class="btn btn-primary" />
                                         </div>
                                     </form>
                                 </div>
@@ -80,18 +67,12 @@
                     </div>
                 </div>
             </div>
-            <div>
-                <a asp-action="Index">Listar Usuários</a>
-            </div>
         </div>
     </div>
-
 </div>
 
 
-@section Scripts {
-    @{
-        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+<div>
+    <a asp-action="Index">Back to List</a>
+</div>
 
-    }
-}
