--- a/Dashboard/Views/Pagamentos/Create.cshtml
+++ b/Dashboard/Views/Pagamentos/Create.cshtml
@@ -33,10 +33,9 @@
                         </div>
                         <div class="card-body">
                             <div class="row">
-                                <div class="col-md-4 ">
-                                    <form asp-action="Add">
+                                <div class="col-md-8 ">
+                                    <form asp-action="Add" class="m-4">
                                         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-
                                         <div class="form-group">
                                             <label asp-for="Nome" class="control-label"></label>
                                             <input asp-for="Nome" class="form-control" />
@@ -52,7 +51,14 @@
                                             <input asp-for="Sigla" class="form-control" />
                                             <span asp-validation-for="Sigla" class="text-danger"></span>
                                         </div>
-
+                                        <div class="form-group form-check">
+                                            <label class="form-check-label">
+                                                <input class="form-check-input" asp-for="Modalidade" />
+                                                @Html.DisplayNameFor(model => model.Modalidade)
+                                            </label>
+                                            <span asp-validation-for="Modalidade" class="text-danger"></span>
+                                        </div>
+                                        <p><em>Selecione para indicar recebimento Crédito e Débito</em></p>
                                         <div class="form-group">
                                             <input type="submit" value="Cadastrar" class="btn btn-info" />
                                         </div>
@@ -63,11 +69,16 @@
                     </div>
                 </div>
             </div>
+            <div>
+                <a asp-action="Index">Listar Forma de Pagamentos</a>
+            </div>
         </div>
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
+@section Scripts {
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
+}
 
