--- a/Dashboard/Views/Pagamentos/Index.cshtml
+++ b/Dashboard/Views/Pagamentos/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Dashboard.Models.Usuario>
+﻿@model IEnumerable<Dashboard.Models.Entity.FormaPagamento>
 
 @{
     ViewData["Title"] = "Index";
@@ -32,7 +32,7 @@
                     <!-- Inicio do Card -->
                     <div class="card card-info">
                         <div class="card-header">
-                            <h5 class="m-0">Cadastro de Usuário</h5>
+                            <h5 class="m-0">Cadastro de Forma de Pagamento</h5>
                         </div>
                         <div class="card-body">
                             <div class="row">
@@ -45,13 +45,9 @@
                                                     @Html.DisplayNameFor(model => model.Nome)
                                                 </th>
                                                 <th>
-                                                    @Html.DisplayNameFor(model => model.Email)
-                                                </th>
-
-                                                <th>
                                                     @Html.DisplayNameFor(model => model.Registro)
                                                 </th>
-                                               
+
                                                 <th></th>
                                             </tr>
                                         </thead>
@@ -62,18 +58,14 @@
                                                     <td>
                                                         @Html.DisplayFor(modelItem => item.Nome)
                                                     </td>
-                                                    <td>
-                                                        @Html.DisplayFor(modelItem => item.Email)
-                                                    </td>
-                         
+
                                                     <td>
                                                         @Html.DisplayFor(modelItem => item.Registro)
                                                     </td>
-                                                 
                                                     <td>
                                                         <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
                                                         <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                                                        <a asp-action="Inativar" asp-route-id="@item.Id">Delete</a>
+                                                        <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
                                                     </td>
                                                 </tr>
                                             }
@@ -89,5 +81,3 @@
     </div>
 </div>
 
-
-  
