--- a/Dashboard/Views/Usuario/Edit.cshtml
+++ b/Dashboard/Views/Usuario/Edit.cshtml
@@ -52,9 +52,9 @@
                                             <span asp-validation-for="Email" class="text-danger"></span>
                                         </div>
                                         <div class="form-group">
-                                            <label asp-for="ChavePrivada" class="control-label" ></label>
-                                            <input asp-for="ChavePrivada" class="form-control" type="password" placeholder="******" />
-                                            <span asp-validation-for="ChavePrivada" class="text-danger"></span>
+                                            <label asp-for="ChavePrivada" class="control-label" style="visibility: hidden;"></label>
+                                            <input asp-for="ChavePrivada" class="form-control" style="visibility: hidden;" />
+                                            <span asp-validation-for="ChavePrivada" class="text-danger" style="visibility: hidden;"></span>
                                         </div>
 
                                         <div class="form-group">
