--- a/Dashboard/Views/Finalizadora/Index.cshtml
+++ b/Dashboard/Views/Finalizadora/Index.cshtml
@@ -11,7 +11,7 @@
         <div class="container-fluid">
             <div class="row mb-2">
                 <div class="col-sm-6">
-                    <h1 class="m-0 text-dark">Usuário</h1>
+                    <h1 class="m-0 text-dark">Pagamentos Realizados</h1>
                 </div><!-- /.col -->
                 <div class="col-sm-6">
                     <ol class="breadcrumb float-sm-right">
@@ -30,7 +30,7 @@
                     <!-- Inicio do Card -->
                     <div class="card card-info">
                         <div class="card-header">
-                            <h5 class="m-0">Cadastro de Usuário</h5>
+                            <h5 class="m-0"><i class="nav-icon fas fa-money-bill"></i></h5>
                         </div>
                         <div class="card-body">
                             <div class="row">
